--- a/assets/base.css
+++ b/assets/base.css
@@ -61,7 +61,7 @@ li{
 }
 a:link,a:active {
   font-weight: 400;
-  color: #330066;
+  color: #9d3314;
   text-decoration: none;
 }
 a:visited, a:hover {
@@ -104,25 +104,25 @@ a:visited, a:hover {
   text-align: left;
 }
 .some-related-articles {
-  color: #666666;
+  color: #9d3314;
 }
 .some-related-articles h1 {
-  color: #330066;
+  color: #9d3314;
   margin-top: 60px;
   text-transform: uppercase;
 }
 .some-related-articles p {
-  color: #666666;
+  color: #9d3314;
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
 .some-related-articles h2 a:link, .some-related-articles h2 a:visited  {
-  color: #999999;
+  color: #9d3314;
   transition: color 0.1s ease;
 }
 .some-related-articles h2 a:hover {
-  color: #999999;
+  color: #9d3314;
   transition: color 0.3s ease;
 }
 
@@ -164,7 +164,7 @@ a:visited, a:hover {
 }
 .button-dark, .button-dark:visited {
   margin: 20px 10px 30px 0;
-  color: #30231d;
+  color: #9d3314;
   border-color: #30231d;
 
 }
