--- a/assets/base.css
+++ b/assets/base.css
@@ -24,7 +24,7 @@ h1 {
   font-weight: 500;
   font-size: 24px;
   line-height: 46px;
-  color: #9d3314;
+  color: #000000;
 }
 h2 {
   font-weight: 400;
