--- a/assets/base.css
+++ b/assets/base.css
@@ -143,7 +143,7 @@ a:visited, a:hover {
   margin-bottom: 60px;
 }
 .summary2 {
-  color: #9d3314;
+  color: #000000;
   margin-top: 20px;
   margin-bottom: 60px;
   font-size: 14px;
