--- a/assets/base.css
+++ b/assets/base.css
@@ -107,7 +107,7 @@ a:visited, a:hover {
   color: #000000;
 }
 .some-related-articles h1 {
-  color: #9d3314;
+  color: #000000;
   margin-top: 60px;
   text-transform: uppercase;
 }
@@ -138,7 +138,7 @@ a:visited, a:hover {
   text-decoration: underline;
 }
 .summary {
-  color: #9d3314;
+  color: #000000;
   margin-top: 40px;
   margin-bottom: 60px;
 }
