--- a/assets/base.css
+++ b/assets/base.css
@@ -24,7 +24,7 @@ h1 {
   font-weight: 500;
   font-size: 24px;
   line-height: 46px;
-  color: #000000;
+  color: #9d3314;
 }
 h2 {
   font-weight: 400;
@@ -73,11 +73,12 @@ a:visited, a:hover {
 /* LAYOUT */
 .fixed-nav-bar {
   box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.6);
+  background: #9d3314;
 }
 
 .content {
   position: relative;
-  background: #9d3314 url("image_start-edit.png") no-repeat center top fixed;
+  background: #ffffff url("image_start-edit.png") no-repeat center top fixed;
   background-size: initial;
   min-height: 480px;
   max-height: 480px;
@@ -107,7 +108,7 @@ a:visited, a:hover {
   color: #000000;
 }
 .some-related-articles h1 {
-  color: #000000;
+  color: #9d3314;
   margin-top: 60px;
   text-transform: uppercase;
 }
