--- a/assets/base.css
+++ b/assets/base.css
@@ -94,6 +94,13 @@ a:visited, a:hover {
   background: #ffffff no-repeat center center fixed;
   background-size: cover;
  }
+.content_coloured {
+  position: relative;
+  background-size: initial;
+  min-height: 60px;
+  min-height: 60px;
+  background: #9d3314;
+ }
 .description, .some-related-articles {
   width: 90%;
   max-width: 960px;
