--- a/assets/base.css
+++ b/assets/base.css
@@ -54,14 +54,14 @@ ul{
 }
 li{
   font-weight: 300;
-  color: #000000;
+  color: #ffffff;
   margin: 20px 0;
   font-size: 16px;
   line-height: 26px;
 }
 a:link,a:active {
   font-weight: 400;
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
 }
 a:visited, a:hover {
