--- a/fixed-navigation-bar.css
+++ b/fixed-navigation-bar.css
@@ -26,10 +26,10 @@
   margin: 0 auto;
 }
 .menu a, .menu a:visited {
-  color: #a0522d;
+  color: #ffffff;
 }
 .menu a:hover, .menu a:target {
-  color: #a0522d;
+  color: #ffffff;
 }
 .menu-items {
   display: inline-block;
@@ -43,7 +43,7 @@
   margin-left: 10px;
 }
 a.sitename, a:visited.sitename {
-  color: #a0522d;
+  color: #ffffff;
 }
 .menu-items li {
   display: inline-block;
