--- a/assets/base.css
+++ b/assets/base.css
@@ -62,12 +62,12 @@ li{
 }
 a:link,a:active {
   font-weight: 400;
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
 }
 a:visited, a:hover {
   font-weight: 400;
-  color: #ffffff;
+  color: #000000;
   text-decoration: underline;
 }
 
