--- a/assets/base.css
+++ b/assets/base.css
@@ -62,12 +62,12 @@ li{
 }
 a:link,a:active {
   font-weight: 400;
-  color: #000000;
-  text-decoration: none;
+  color: #9d3314;
+  text-decoration: underline;
 }
 a:visited, a:hover {
   font-weight: 400;
-  color: #000000;
+  color: #9d3314;
   text-decoration: underline;
 }
 
