--- a/fixed-navigation-bar.css
+++ b/fixed-navigation-bar.css
@@ -43,7 +43,7 @@
   margin-left: 10px;
 }
 a.sitename, a:visited.sitename {
-  color: #ffffff;
+  color: #330066;
 }
 .menu-items li {
   display: inline-block;
