--- a/fixed-navigation-bar.css
+++ b/fixed-navigation-bar.css
@@ -6,7 +6,7 @@
   z-index: 9999;
   width: 100%;
   height: 70px;
-  background-color: #9d3314;
+  background-color: #94aac4;
 }
 
 /* The element at the top of the page right after the fixed navigation bar
