--- a/assets/base.css
+++ b/assets/base.css
@@ -74,7 +74,7 @@ a:visited, a:hover {
 /* LAYOUT */
 .fixed-nav-bar {
   box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.6);
-  background: #3e81c7;
+  background: #2cccd3;
 }
 
 .content {
