--- a/assets/base.css
+++ b/assets/base.css
@@ -62,7 +62,7 @@ li{
 }
 a:link,a:active {
   font-weight: 400;
-  color: #3e81c7;
+  color: #2cccd3;
   text-decoration: underline;
 }
 a:visited, a:hover {
@@ -81,8 +81,8 @@ a:visited, a:hover {
   position: relative;
   background: #ffffff url("image_start-edit.png") no-repeat center top fixed;
   background-size: initial;
-  min-height: 380px;
-  max-height: 380px;
+  min-height: 480px;
+  max-height: 480px;
  }
  .content_contact {
   position: relative;
@@ -165,7 +165,7 @@ a:visited, a:hover {
   font-family: 'Hind', sans-serif;
   color: #cccccc;
   background-color: transparent;
-  border: 2px solid #3e81c7;
+  border: 2px solid #2cccd3;
   border-radius: 3px;
   text-transform: capitalize;
   text-align: left;
