--- a/assets/base.css
+++ b/assets/base.css
@@ -67,7 +67,7 @@ a:link,a:active {
 }
 a:visited, a:hover {
   font-weight: 400;
-  color: #3e81c7;
+  color: #2cccd3;
   text-decoration: underline;
 }
 
@@ -127,22 +127,22 @@ a:visited, a:hover {
 }
 
 .some-related-articles h2 a:link, .some-related-articles h2 a:visited  {
-  color: #3e81c7;
+  color: #2cccd3;
   transition: color 0.1s ease;
 }
 .some-related-articles h2 a:hover {
-  color: #3e81c7;
+  color: #2cccd3;
   transition: color 0.3s ease;
 }
 
 
 /* SPECIAL */
 .onblue:link {
-  color: #3e81c7;
+  color: #2cccd3;
   font-weight: 400;
 }
 .onblue:visited, .onblue:hover {
-  color: #3e81c7;
+  color: #2cccd3;
   font-weight: 400;
   text-decoration: underline;
 }
@@ -173,7 +173,7 @@ a:visited, a:hover {
 }
 .button-dark, .button-dark:visited {
   margin: 20px 10px 30px 0;
-  color: #3e81c7;
+  color: #2cccd3;
   border-color: #30231d;
 
 }
@@ -211,7 +211,7 @@ a:visited, a:hover {
   font-family: 'Hind', sans-serif;
   position: absolute;
   top: 370;
-  color: #3e81c7;
+  color: #2cccd3;
   background: rgba(1,1,1, 0);
   font-weight: 300;
   padding: 8px 12px;
