--- a/fixed-navigation-bar.css
+++ b/fixed-navigation-bar.css
@@ -6,7 +6,7 @@
   z-index: 9999;
   width: 100%;
   height: 70px;
-  background-color: #2cccd3;
+  background-color: #fdf8c1;
 }
 
 /* The element at the top of the page right after the fixed navigation bar
@@ -26,10 +26,10 @@
   margin: 0 auto;
 }
 .menu a, .menu a:visited {
-  color: #ffffff;
+  color: #f46d43;
 }
 .menu a:hover, .menu a:target {
-  color: #ffffff;
+  color: #f46d43;
 }
 .menu-items {
   display: inline-block;
@@ -43,7 +43,7 @@
   margin-left: 10px;
 }
 a.sitename, a:visited.sitename {
-  color: #470a68;
+  color: #3189bf;
 }
 .menu-items li {
   display: inline-block;
